--- a/modules/samples/identity-mgt/InfoRecoverySample/pom.xml
+++ b/modules/samples/identity-mgt/InfoRecoverySample/pom.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2005-2014, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+  ~ Copyright (c) 2015, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
   ~
   ~ WSO2 Inc. licenses this file to you under the Apache License,
   ~ Version 2.0 (the "License"); you may not use this file except
@@ -22,7 +23,7 @@
 
     <parent>
         <groupId>org.wso2.is</groupId>
-        <artifactId>wso2is-identity-samples</artifactId>
+        <artifactId>wso2is-identity-samples-info-recovery</artifactId>
         <version>5.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
