--- a/pom.xml
+++ b/pom.xml
@@ -1075,7 +1075,7 @@
         <testng.version>6.1.1</testng.version>
         <carbon.deployment.version>4.4.0</carbon.deployment.version>
         <carbon.registry.version>4.4.1</carbon.registry.version>
-        <carbon.multitenancy.version>4.4.0</carbon.multitenancy.version>
+        <carbon.multitenancy.version>4.4.1-SNAPSHOT</carbon.multitenancy.version>
         <jaggery.extensions.version>1.3.0</jaggery.extensions.version>
         <axis2.jibx.wso2.version>1.6.1.wso2v11</axis2.jibx.wso2.version>
         <axis2.jaxb.wso2.version>1.6.1.wso2v11</axis2.jaxb.wso2.version>
