--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <module>modules/styles</module>
         <module>modules/dashboard</module>
         <module>modules/samples</module>
-        <module>modules/integration</module>
+        <!--<module>modules/integration</module>-->
     </modules>
 
     <licenses>
@@ -1004,7 +1004,7 @@
     </profiles>
 
     <properties>
-        <carbon.identity.version>4.4.1</carbon.identity.version>
+        <carbon.identity.version>4.4.0</carbon.identity.version>
         <product.identity.version>5.1.0-SNAPSHOT</product.identity.version>
         <bcprov.jdk13.version>140</bcprov.jdk13.version>
         <bcprov.jdk15.version>132</bcprov.jdk15.version>
