change carbon-identity version to 4.5.1 until stabilize the master branch with code_quality_improvement fixes.

--- a/pom.xml
+++ b/pom.xml
@@ -1004,7 +1004,7 @@
     </profiles>
 
     <properties>
-        <carbon.identity.version>4.5.1-SNAPSHOT</carbon.identity.version>
+        <carbon.identity.version>4.5.1</carbon.identity.version>
         <product.identity.version>5.1.0-SNAPSHOT</product.identity.version>
         <bcprov.jdk13.version>140</bcprov.jdk13.version>
         <bcprov.jdk15.version>132</bcprov.jdk15.version>
