properties are not consistent with sso agent

--- a/modules/samples/sso/SSOAgentSample/src/main/resources/travelocity.properties
+++ b/modules/samples/sso/SSOAgentSample/src/main/resources/travelocity.properties
@@ -35,7 +35,7 @@ SkipURIs=/travelocity.com/index.jsp
 SAML2.SPEntityId=travelocity.com
 
 #The URL of the SAML 2.0 Assertion Consumer
-SAML2.ACSURL=http://localhost:8080/travelocity.com/home.jsp
+SAML2.AssertionConsumerURL=http://localhost:8080/travelocity.com/home.jsp
 
 #A unique identifier for this SAML 2.0 Service Provider application
 SAML2.IdPEntityId=localhost
@@ -79,13 +79,13 @@ PrivateKeyAlias=wso2carbon
 PrivateKeyPassword=wso2carbon
 
 #OAuth2 token endpoint URL
-SAML2.OAuth2TokenURL=https://localhost:9443/oauth2/token
+OAuth2.TokenURL=https://localhost:9443/oauth2/token
 
 #OAuth2 Client ID
-SAML2.OAuth2ClientId=Qn5DQHCYfshxeZh6R9SL1HM2lsMa
+OAuth2.ClientId=Qn5DQHCYfshxeZh6R9SL1HM2lsMa
 
 #OAuth2 Client Secret
-SAML2.OAuth2ClientSecret=cbkAs1gajdwPAMbrSR54hPAIcz0a
+OAuth2.ClientSecret=cbkAs1gajdwPAMbrSR54hPAIcz0a
 
 #OpenId Provider Url
 OpenId.ProviderURL=https://localhost:9443/openid/
