--- a/pom.xml
+++ b/pom.xml
@@ -767,12 +767,6 @@
                 <version>${rampart.wso2.version.1}</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.shindig</groupId>
-                <artifactId>shindig-server</artifactId>
-                <version>${shindig.version}</version>
-                <type>war</type>
-            </dependency>
-            <dependency>
                 <groupId>org.wso2.carbon.identity</groupId>
                 <artifactId>org.wso2.carbon.identity.application.mgt.stub</artifactId>
                 <version>${carbon.identity.version}</version>
@@ -1035,6 +1029,7 @@
         <junit.version>3.8.1</junit.version>
         <carbon.kernel.version>4.4.0</carbon.kernel.version>
         <carbon.commons.version>4.4.3</carbon.commons.version>
+        <carbon.dashboards.version>1.0.0</carbon.dashboards.version>
         <carbon.p2.plugin.version>1.5.4</carbon.p2.plugin.version>
         <orbit.version.axiom>1.2.11.wso2v5</orbit.version.axiom>
         <oauth2.client.version>0.22.1358727-wso2v7</oauth2.client.version>
@@ -1055,7 +1050,6 @@
         <emma.version>2.1.5320</emma.version>
         <jaggeryjs.version>0.10.0</jaggeryjs.version>
         <stratos.version>2.2.0</stratos.version>
-        <shindig.version>2.5.0-beta5</shindig.version>
         <ws.module.version>1.1.0</ws.module.version>
         <oauth.module.version>1.0.0</oauth.module.version>
         <email.module.version>1.0.0</email.module.version>
