Fixing naming issues of travelocity.properties file

--- a/modules/samples/sso/SSOAgentSample/src/main/resources/travelocity.properties
+++ b/modules/samples/sso/SSOAgentSample/src/main/resources/travelocity.properties
@@ -97,7 +97,9 @@ OpenId.ReturnToURL=http://localhost:8080/travelocity.com/home.jsp
 #SAML.PostBinding.RequestPage=path/to/the/html
 
 #Additional request parameters
-#SAML.Request.Query.Param=&forceAuth=true
+#QueryParams=tenantDomain=-1234
+
+#SAML2.IsForceAuthn=true
 
 #Specify whether the consumer requests user attributes from the provider
 OpenId.EnableAttributeExchange=true
